--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Assignment 5 Project</string>
+    <string name="app_name">Project</string>
+    <string name="about_page">About</string>
+    <string name="listview_page">Listview</string>
+    <string name="icon"></string>
 </resources>
