--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Project</string>
+    <string name="app_name">WonderApp</string>
     <string name="about_page">About</string>
 </resources>
